WSE-114 fix java9 support. Bump to version 17.12.4